about me page white space fixed and margins edited

--- a/oz/styles/style.css
+++ b/oz/styles/style.css
@@ -95,8 +95,8 @@ nav {
   summary {
     font-weight: 600;
     background-color: var(--primary-color);
-    padding: 1.2rem;
-    margin-bottom: 1.2rem;
+    padding: 1rem;
+    margin-bottom: .4rem;
     border-radius: 0.5rem;
     cursor: pointer;
    }
@@ -407,13 +407,14 @@ h3 {
   display: grid;
   grid-template-columns: 2% 47% 2% 47% 2%;
   grid-template-rows:  .45fr 100px auto auto auto;
+  gap: 1em;
 }
 
 .intro-msg {
-margin-top: 3%;
+margin-top: 50px;
   grid-column: 4/4;
   grid-row: 1/1;
-  width: 100%;
+  width: 90%;
 }
 
 .intro-img {
@@ -427,37 +428,36 @@ margin-top: 3%;
 #aboutme-img {
   grid-column: 2/2;
   grid-row: 1/3;
-  width: 100%;
-  max-width: 500px;
+  max-width: 100%;
   justify-content: center;
   justify-items: center;
   text-align: center;
+  max-height: 100%;
 }
 
 .resume-title {
 text-align: center;
   grid-column: 2/2;
-  grid-row: 4/4;
-  margin-top: -300px; 
+  grid-row: 3/4;
 }
 
 .resume-accordian {
-  margin-top: -100px; 
+ 
   grid-column: 2/2;
-  grid-row: 5/6;
+  grid-row: 4/6;
 }
 
 .slideshow-title {
   grid-column: 4/4;
   grid-row: 2/2;
-
+width: 90%;
             
 }
 
 .slideshow-images {
   grid-column: 4/4;
   grid-row: 3/5;
-  width: 100%;
+  width: 90%;
 
 }
 
